fix: prevent disclaimer from overflowing

--- a/app/assets/stylesheets/components/maps/_v-map-disclaimer.scss
+++ b/app/assets/stylesheets/components/maps/_v-map-disclaimer.scss
@@ -21,6 +21,11 @@
     }
   }
 
+  &__body {
+    overflow-y: auto;
+    max-height: 14em;
+  }
+
   &--embedded {
     &.v-map-disclaimer {
       background: transparent;
